--- a/index.html
+++ b/index.html
@@ -1176,8 +1176,8 @@
           <h3>اتصل بنا</h3>
           <ul class="footer-links">
             <li><a href="#"><i class="fas fa-envelope"></i> info@janeen.com</a></li>
-            <li><a href="#"><i class="fas fa-phone"></i> +966 123 456 789</a></li>
-            <li><a href="#"><i class="fas fa-map-marker-alt"></i> الرياض، المملكة العربية السعودية</a></li>
+            <li><a href="#"><i class="fas fa-phone"></i> 0594216670</a></li>
+            <li><a href="#"><i class="fas fa-map-marker-alt"></i> فلسطين_جنين_القدس المفتوحة</a></li>
           </ul>
         </div>
       </div>
